<resources>
    <string name="app_name">Business Card Wallet</string>

    <!--    TODO https://guides.codepath.com/android/Storing-Secret-Keys-in-Android-->
    <!--    <string name="private_key">NntH+3XMYQJdlU8eo+lkbeBAskuCw6qdvhOkR10xP2U=</string>-->


    <string name="address">Address</string>
    <string name="qr_description">QR Code associated with the user\'s business card</string>
    <string name="editButton">Edit</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>


    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="print">Print</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="phone_icon">Phone icon</string>
    <string name="email_icon">Email icon</string>
    <string name="location_icon">Location icon</string>
    <string name="dark_theme">Dark theme</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contact_info">Contact Info</string>


    <!-- Settings Preferences -->
    <string name="about">About</string>
    <string name="name_mandatory">Name*</string>
    <string name="last_name_mandatory">Last name*</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_last_name">Edit last name</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_phone">Edit phone</string>
    <string name="phone">Phone</string>
    <string name="edit_profession">Edit profession</string>
    <string name="profession">Profession</string>
    <string name="profession_mandatory">Profession*</string>
    <string name="appearence">Appearance</string>
    <string name="about_us">About us</string>
    <string name="language">Language</string>
    <string name="version">Version</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="application_logo">Application logo</string>
    <string name="password">Password</string>
    <string name="password_mandatory">Password*</string>
    <string name="registration_hint">Don\'t have an account? Click here</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email address</string>
    <string name="email_address_mandatory">Email address*</string>
    <string name="log_in_hint">"Already have an account? Log in "</string>
    <string name="confirm_password_mandatory">Confirm password*</string>
    <string name="register">Register</string>
    <string name="required_asterisk"><![CDATA[<font color=\'#cc0029\'>&nbsp*</font>]]></string>
    <string name="institution">Institution</string>
    <string name="welcome">Welcome!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_password">Edit password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="turn_flash_on">Turn flash on</string>
    <string name="scan_a_business_card_qr_code">Scan a Business Card QR Code</string>
    <string name="please_add_someone">Please add someone</string>
    <string name="edit_address">Edit address</string>
    <string name="edit_institution">Edit institution</string>
    <string name="insitution">Institution</string>
</resources>