<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:iconTint="@color/material_on_primary_emphasis_medium"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_baseline_print_white_24"
        android:title="@string/print"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
